Resuelto hasta el paso 3

--- a/src/explore.es.ipynb
+++ b/src/explore.es.ipynb
@@ -11,7 +11,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 1,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -22,8 +22,117 @@
                 "import sqlite3\n",
                 "import matplotlib.pyplot as plt\n",
                 "import seaborn as sns\n",
+                "import pandas as pd\n",
+                "\n",
                 "\n"
             ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 2,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Defaulting to user installation because normal site-packages is not writeable\n",
+                        "Requirement already satisfied: pandas in /home/vscode/.local/lib/python3.11/site-packages (2.3.3)\n",
+                        "Requirement already satisfied: requests in /home/vscode/.local/lib/python3.11/site-packages (2.27.1)\n",
+                        "Requirement already satisfied: lxml in /home/vscode/.local/lib/python3.11/site-packages (6.0.2)\n",
+                        "Requirement already satisfied: numpy>=1.23.2 in /home/vscode/.local/lib/python3.11/site-packages (from pandas) (2.2.6)\n",
+                        "Requirement already satisfied: python-dateutil>=2.8.2 in /home/vscode/.local/lib/python3.11/site-packages (from pandas) (2.9.0.post0)\n",
+                        "Requirement already satisfied: pytz>=2020.1 in /home/vscode/.local/lib/python3.11/site-packages (from pandas) (2025.2)\n",
+                        "Requirement already satisfied: tzdata>=2022.7 in /home/vscode/.local/lib/python3.11/site-packages (from pandas) (2025.2)\n",
+                        "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /home/vscode/.local/lib/python3.11/site-packages (from requests) (1.26.20)\n",
+                        "Requirement already satisfied: certifi>=2017.4.17 in /home/vscode/.local/lib/python3.11/site-packages (from requests) (2025.10.5)\n",
+                        "Requirement already satisfied: charset-normalizer~=2.0.0 in /home/vscode/.local/lib/python3.11/site-packages (from requests) (2.0.12)\n",
+                        "Requirement already satisfied: idna<4,>=2.5 in /home/vscode/.local/lib/python3.11/site-packages (from requests) (3.11)\n",
+                        "Requirement already satisfied: six>=1.5 in /home/vscode/.local/lib/python3.11/site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+                        "\n",
+                        "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.1.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.2\u001b[0m\n",
+                        "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+                        "Note: you may need to restart the kernel to use updated packages.\n"
+                    ]
+                }
+            ],
+            "source": [
+                "pip install pandas requests lxml\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 26,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "200\n"
+                    ]
+                }
+            ],
+            "source": [
+                "\n",
+                "url = \"https://en.wikipedia.org/wiki/List_of_most-streamed_songs_on_Spotify\"\n",
+                "headers = {\"User-Agent\": \"Mozilla/5.0\"} # esto se hace para parecer un navegador real\n",
+                "response = requests.get(url, headers=headers) # contiene toda la respuesta del servidor a tu petición HTTP\n",
+                "print(response.status_code) #es una forma de verificar que la petición fue exitosa (200)\n",
+                "response.raise_for_status() # detiene el programa si hubo un error\n",
+                "html = response.text"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 31,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Tabla cargada. Primeras 5 filas:\n",
+                        "  Rank                 Song                 Artist(s) Streams (billions)  \\\n",
+                        "0    1    \"Blinding Lights\"                The Weeknd              5.084   \n",
+                        "1    2       \"Shape of You\"                Ed Sheeran              4.601   \n",
+                        "2    3            \"Starboy\"  The Weeknd and Daft Punk              4.153   \n",
+                        "3    4    \"Sweater Weather\"         The Neighbourhood              4.102   \n",
+                        "4    5  \"Someone You Loved\"             Lewis Capaldi              4.094   \n",
+                        "\n",
+                        "        Release date Ref.  \n",
+                        "0   29 November 2019  [1]  \n",
+                        "1     6 January 2017  [2]  \n",
+                        "2  21 September 2016  [3]  \n",
+                        "3    3 December 2012  [4]  \n",
+                        "4    8 November 2018  [5]  \n"
+                    ]
+                },
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "/tmp/ipykernel_824/2542077442.py:5: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
+                        "  df = pd.read_html(str(table))[0]\n"
+                    ]
+                }
+            ],
+            "source": [
+                "# convertimos el html en una sopa\n",
+                "soup = BeautifulSoup(response.content) # lo convertimos a sopa para poder recorrerlo más fácilmente\n",
+                "table = soup.find(\"table\", {\"class\": \"wikitable\"}) # buscamos la tabla por su clase CSS\n",
+                "# Convertimos la tabla a DataFrame\n",
+                "df = pd.read_html(str(table))[0]\n",
+                "print(\"Tabla cargada. Primeras 5 filas:\")\n",
+                "print(df.head())\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": []
         }
     ],
     "metadata": {
