--- a/src/explore.es.ipynb
+++ b/src/explore.es.ipynb
@@ -349,7 +349,7 @@
                 "ax.set_ylabel('streams_(billions)')\n",
                 "plt.show()\n",
                 "\n",
-                "# PERDON POR LA PALETA DE COLORES 😂"
+                "# PERDON POR LA PALETA DE COLORES 😂😂"
             ]
         }
     ],
